# speed_ex01

./: CMakeLists.txt  CMakelists.txt  dealer.cpp  dealer.hpp  mysafestack.hpp
tests/: test_cardoperation.cpp  test_dealer.cpp
